Fix z-index for GameMenu

--- a/src/core/ui/GameMenu.module.css
+++ b/src/core/ui/GameMenu.module.css
@@ -47,7 +47,6 @@
   top: 300px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 21;
   width: 500px;
   height: auto;
   padding: 30px;
